--- a/src/components/TaskCard/TaskCard.scss
+++ b/src/components/TaskCard/TaskCard.scss
@@ -23,6 +23,11 @@
   min-height: 56px;
 }
 
+.taskIcon {
+  width: 28px !important;
+  height: 28px;
+}
+
 .squareBg {
   background-color: lighten($info, 15%);
 }
